Feat: Added metrics, and removed swagger 2, and better error response
